--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1292,132 +1292,6 @@
             }
           }
         },
-        "callout": {
-          "text": {
-            "sm": {
-              "default": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
-                  "fontWeight": "{config.fontWeight.medium}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text}"
-                },
-                "type": "typography"
-              },
-              "strong": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
-                  "fontWeight": "{config.fontWeight.semibold}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text}"
-                },
-                "type": "typography"
-              }
-            },
-            "md": {
-              "default": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
-                  "fontWeight": "{config.fontWeight.medium}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.125rem"
-                },
-                "type": "typography"
-              },
-              "strong": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
-                  "fontWeight": "{config.fontWeight.semibold}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.125rem"
-                },
-                "type": "typography"
-              }
-            },
-            "lg": {
-              "default": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
-                  "fontWeight": "{config.fontWeight.medium}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.25rem"
-                },
-                "type": "typography"
-              },
-              "strong": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
-                  "fontWeight": "{config.fontWeight.semibold}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.25rem"
-                },
-                "type": "typography"
-              }
-            }
-          },
-          "symbol": {
-            "sm": {
-              "default": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
-                  "fontWeight": "{config.fontWeight.medium}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol}"
-                },
-                "type": "typography"
-              },
-              "strong": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
-                  "fontWeight": "{config.fontWeight.semibold}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol}"
-                },
-                "type": "typography"
-              }
-            },
-            "md": {
-              "default": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
-                  "fontWeight": "{config.fontWeight.medium}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
-                },
-                "type": "typography"
-              },
-              "strong": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
-                  "fontWeight": "{config.fontWeight.semibold}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
-                },
-                "type": "typography"
-              }
-            },
-            "lg": {
-              "default": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
-                  "fontWeight": "{config.fontWeight.medium}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
-                },
-                "type": "typography"
-              },
-              "strong": {
-                "value": {
-                  "fontFamily": "{config.fontFamily.symbol}",
-                  "fontWeight": "{config.fontWeight.semibold}",
-                  "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
-                },
-                "type": "typography"
-              }
-            }
-          }
-        },
         "title": {
           "text": {
             "sm": {
@@ -1538,6 +1412,132 @@
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "110%",
                   "fontSize": "{config.fontSize.title.symbol} * 2"
+                },
+                "type": "typography"
+              }
+            }
+          }
+        },
+        "callout": {
+          "text": {
+            "sm": {
+              "default": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontWeight": "{config.fontWeight.medium}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.text}"
+                },
+                "type": "typography"
+              },
+              "strong": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontWeight": "{config.fontWeight.semibold}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.text}"
+                },
+                "type": "typography"
+              }
+            },
+            "md": {
+              "default": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontWeight": "{config.fontWeight.medium}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.text} + 0.125rem"
+                },
+                "type": "typography"
+              },
+              "strong": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontWeight": "{config.fontWeight.semibold}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.text} + 0.125rem"
+                },
+                "type": "typography"
+              }
+            },
+            "lg": {
+              "default": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontWeight": "{config.fontWeight.medium}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.text} + 0.25rem"
+                },
+                "type": "typography"
+              },
+              "strong": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontWeight": "{config.fontWeight.semibold}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.text} + 0.25rem"
+                },
+                "type": "typography"
+              }
+            }
+          },
+          "symbol": {
+            "sm": {
+              "default": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontWeight": "{config.fontWeight.medium}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.symbol}"
+                },
+                "type": "typography"
+              },
+              "strong": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontWeight": "{config.fontWeight.semibold}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.symbol}"
+                },
+                "type": "typography"
+              }
+            },
+            "md": {
+              "default": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontWeight": "{config.fontWeight.medium}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
+                },
+                "type": "typography"
+              },
+              "strong": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontWeight": "{config.fontWeight.semibold}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
+                },
+                "type": "typography"
+              }
+            },
+            "lg": {
+              "default": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontWeight": "{config.fontWeight.medium}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
+                },
+                "type": "typography"
+              },
+              "strong": {
+                "value": {
+                  "fontFamily": "{config.fontFamily.symbol}",
+                  "fontWeight": "{config.fontWeight.semibold}",
+                  "lineHeight": "140%",
+                  "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
                 },
                 "type": "typography"
               }
@@ -2010,6 +2010,36 @@
             },
             "lg": {
               "value": "{app.fontSize.surface.display.symbol.md} + 2rem",
+              "type": "fontSizes"
+            }
+          }
+        },
+        "title": {
+          "text": {
+            "sm": {
+              "value": "{config.fontSize.title.text}",
+              "type": "fontSizes"
+            },
+            "md": {
+              "value": "{app.fontSize.surface.title.text.sm} + 1rem",
+              "type": "fontSizes"
+            },
+            "lg": {
+              "value": "{app.fontSize.surface.title.text.md} + 1rem",
+              "type": "fontSizes"
+            }
+          },
+          "symbol": {
+            "sm": {
+              "value": "{config.fontSize.title.symbol}",
+              "type": "fontSizes"
+            },
+            "md": {
+              "value": "{app.fontSize.surface.title.symbol.sm} + 1rem",
+              "type": "fontSizes"
+            },
+            "lg": {
+              "value": "{app.fontSize.surface.title.symbol.md} + 1rem",
               "type": "fontSizes"
             }
           }
