--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2083,6 +2083,60 @@
             "value": "{config.fontSize.subtitle.symbol}",
             "type": "fontSizes"
           }
+        },
+        "body": {
+          "text": {
+            "sm": {
+              "value": "{app.fontSize.surface.body.text.md} - 0.125rem",
+              "type": "fontSizes"
+            },
+            "md": {
+              "value": "{config.fontSize.body.text}",
+              "type": "fontSizes"
+            }
+          },
+          "symbol": {
+            "sm": {
+              "value": "{app.fontSize.surface.body.symbol.md} - 0.125rem",
+              "type": "fontSizes"
+            },
+            "md": {
+              "value": "{config.fontSize.body.symbol}",
+              "type": "fontSizes"
+            }
+          }
+        },
+        "caption": {
+          "text": {
+            "value": "{config.fontSize.caption.text}",
+            "type": "fontSizes"
+          },
+          "symbol": {
+            "value": "{config.fontSize.caption.symbol}",
+            "type": "fontSizes"
+          }
+        },
+        "footnote": {
+          "text": {
+            "value": "{config.fontSize.footnote.text}",
+            "type": "fontSizes"
+          },
+          "symbol": {
+            "value": "{config.fontSize.footnote.symbol}",
+            "type": "fontSizes"
+          }
+        },
+        "code": {
+          "text": {
+            "sm": {
+              "value": "{app.fontSize.surface.code.text.md} - 0.125rem",
+              "type": "fontSizes"
+            },
+            "md": {
+              "value": "{config.fontSize.code.text}",
+              "type": "fontSizes"
+            }
+          }
         }
       }
     },
