--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1300,7 +1300,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "130%",
-                  "fontSize": "{config.fontSize.title.text}"
+                  "fontSize": "{app.fontSize.surface.title.text.sm}"
                 },
                 "type": "typography"
               },
@@ -1309,7 +1309,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "130%",
-                  "fontSize": "{config.fontSize.title.text}"
+                  "fontSize": "{app.fontSize.surface.title.text.sm}"
                 },
                 "type": "typography"
               }
@@ -1320,7 +1320,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "120%",
-                  "fontSize": "{config.fontSize.title.text} * 1.5"
+                  "fontSize": "{app.fontSize.surface.title.text.md}"
                 },
                 "type": "typography"
               },
@@ -1329,7 +1329,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "120%",
-                  "fontSize": "{config.fontSize.title.text} * 1.5"
+                  "fontSize": "{app.fontSize.surface.title.text.md}"
                 },
                 "type": "typography"
               }
@@ -1340,7 +1340,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "110%",
-                  "fontSize": "{config.fontSize.title.text} * 2"
+                  "fontSize": "{app.fontSize.surface.title.text.lg}"
                 },
                 "type": "typography"
               },
@@ -1349,7 +1349,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "110%",
-                  "fontSize": "{config.fontSize.title.text} * 2"
+                  "fontSize": "{app.fontSize.surface.title.text.lg}"
                 },
                 "type": "typography"
               }
@@ -1362,7 +1362,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "130%",
-                  "fontSize": "{config.fontSize.title.symbol}"
+                  "fontSize": "{app.fontSize.surface.title.symbol.sm}"
                 },
                 "type": "typography"
               },
@@ -1371,7 +1371,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "130%",
-                  "fontSize": "{config.fontSize.title.symbol}"
+                  "fontSize": "{app.fontSize.surface.title.symbol.sm}"
                 },
                 "type": "typography"
               }
@@ -1382,7 +1382,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "120%",
-                  "fontSize": "{config.fontSize.title.symbol} * 1.5"
+                  "fontSize": "{app.fontSize.surface.title.symbol.md}"
                 },
                 "type": "typography"
               },
@@ -1391,7 +1391,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "120%",
-                  "fontSize": "{config.fontSize.title.symbol} * 1.5"
+                  "fontSize": "{app.fontSize.surface.title.symbol.md}"
                 },
                 "type": "typography"
               }
@@ -1402,7 +1402,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "110%",
-                  "fontSize": "{config.fontSize.title.symbol} * 2"
+                  "fontSize": "{app.fontSize.surface.title.symbol.lg}"
                 },
                 "type": "typography"
               },
@@ -1411,7 +1411,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.bold}",
                   "lineHeight": "110%",
-                  "fontSize": "{config.fontSize.title.symbol} * 2"
+                  "fontSize": "{app.fontSize.surface.title.symbol.lg}"
                 },
                 "type": "typography"
               }
@@ -1426,7 +1426,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text}"
+                  "fontSize": "{app.fontSize.surface.callout.text.sm}"
                 },
                 "type": "typography"
               },
@@ -1435,7 +1435,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text}"
+                  "fontSize": "{app.fontSize.surface.callout.text.sm}"
                 },
                 "type": "typography"
               }
@@ -1446,7 +1446,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.125rem"
+                  "fontSize": "{app.fontSize.surface.callout.text.md}"
                 },
                 "type": "typography"
               },
@@ -1455,7 +1455,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.125rem"
+                  "fontSize": "{app.fontSize.surface.callout.text.md}"
                 },
                 "type": "typography"
               }
@@ -1466,7 +1466,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.25rem"
+                  "fontSize": "{app.fontSize.surface.callout.text.lg}"
                 },
                 "type": "typography"
               },
@@ -1475,7 +1475,7 @@
                   "fontFamily": "{config.fontFamily.primary}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.text} + 0.25rem"
+                  "fontSize": "{app.fontSize.surface.callout.text.lg}"
                 },
                 "type": "typography"
               }
@@ -1488,7 +1488,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol}"
+                  "fontSize": "{app.fontSize.surface.callout.symbol.sm}"
                 },
                 "type": "typography"
               },
@@ -1497,7 +1497,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol}"
+                  "fontSize": "{app.fontSize.surface.callout.symbol.sm}"
                 },
                 "type": "typography"
               }
@@ -1508,7 +1508,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
+                  "fontSize": "{app.fontSize.surface.callout.symbol.md}"
                 },
                 "type": "typography"
               },
@@ -1517,7 +1517,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
+                  "fontSize": "{app.fontSize.surface.callout.symbol.md}"
                 },
                 "type": "typography"
               }
@@ -1528,7 +1528,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
+                  "fontSize": "{app.fontSize.surface.callout.symbol.lg}"
                 },
                 "type": "typography"
               },
@@ -1537,7 +1537,7 @@
                   "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
-                  "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
+                  "fontSize": "{app.fontSize.surface.callout.symbol.lg}"
                 },
                 "type": "typography"
               }
